--- a/bootstrap_stater/src/main/resources/templates/commute/commute_data_log_list.html
+++ b/bootstrap_stater/src/main/resources/templates/commute/commute_data_log_list.html
@@ -101,15 +101,13 @@
 							  <div class="modal-dialog modal-lg" role="document">
 							    <div class="modal-content border-0 shadow-lg">
 							      
-							      <!-- 모달 헤더 -->
+							      <!-- 모달창 -->
 							      <div class="modal-header bg-primary text-white">
 							        <h5 class="modal-title">출근기록 삭제 데이터 로그</h5>
 							        <button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
 							          <span aria-hidden="true">&times;</span>
 							        </button>
 							      </div>
-							      
-							      <!-- 모달 바디 -->
 							      <div class="modal-body">
 							        <table class="table table-borderless table-sm table-striped mb-0">
 							          <tbody>
@@ -140,8 +138,6 @@
 							          </tbody>
 							        </table>
 							      </div>
-							      
-							      <!-- 모달 푸터 -->
 							      <div class="modal-footer">
 							        <button type="button" class="btn btn-secondary rounded-pill px-4" data-dismiss="modal">닫기</button>
 							      </div>
