공통문서 수정 기능추가

--- a/bootstrap_stater/src/main/resources/templates/gw/docView.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/docView.html
@@ -50,7 +50,7 @@
 					</div>
 					<div class="d-flex justify-content-end w-100">
 					  <a href="/groupware/document" class="btn btn-primary mr-2">목록으로</a>
-					  <a class="btn btn-danger" id="modify-btn" th:href="@{/groupware/docWirte/{docId}(docId=${documentDTO.docId})}">수정</a>
+					  <a class="btn btn-danger" id="modify-btn" th:href="@{/groupware/docWrite(docId=${documentDTO.docId})}">수정</a>
 					</div>
 				</div>
 			</div>
