--- a/bootstrap_stater/src/main/resources/templates/gw/ntcWrite.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/ntcWrite.html
@@ -56,5 +56,8 @@
 			</div>
 		</div>
 	</th:block>
+	<th:block layout:fragment="script">
+		<script th:src="@{/bootstrap/js/groupware/notice.js}"></script>
+	</th:block>
 </body>
 </html>
