--- a/bootstrap_stater/src/main/resources/templates/gw/notice.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/notice.html
@@ -150,8 +150,8 @@
 					</div>
 
 					<div class="modal-footer">
-						<a href="#" class="btn btn-warning" id="editNoticeBtn">수정</a>
-						<a href="#" class="btn btn-danger" id="deleteNoticeBtn">삭제</a>
+						<a href="#" class="btn btn-warning" id="editNoticeBtn">수정</a> <a
+							href="#" class="btn btn-danger" id="deleteNoticeBtn">삭제</a>
 						<button type="button" class="btn btn-primary" id="saveEditBtn"
 							form="editForm" style="display: none;">수정 완료</button>
 						<button class="btn btn-secondary" type="button"
@@ -160,5 +160,8 @@
 				</div>
 			</div>
 		</div>
+	</th:block>
+	<th:block layout:fragment="script">
+		<script th:src="@{/bootstrap/js/groupware/notice.js}"></script>
 	</th:block>
 </html>
