--- a/bootstrap_stater/src/main/resources/templates/gw/schedule.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/schedule.html
@@ -12,7 +12,10 @@
 	rel="stylesheet">
 <link href="css/sb-admin-2.min.css" rel="stylesheet">
 </head>
-<body th:data-current-emp-name="${currentEmpName}" th:data-current-emp-id="${currentEmpId}" th:data-emp-dept-id="${empDeptId}" th:data-emp-dept-name="${empDeptName}">
+<body th:data-current-emp-name="${currentEmpName}"
+	th:data-current-emp-id="${currentEmpId}"
+	th:data-emp-dept-id="${empDeptId}"
+	th:data-emp-dept-name="${empDeptName}">
 	<th:block layout:fragment="content">
 		<div class="container-fluid">
 			<div class="row">
@@ -24,7 +27,7 @@
 							data-toggle="collapse" role="button" aria-expanded="true"
 							aria-controls="collapse2">
 							<h6 class="m-0 font-weight-bold">전체 일정관리</h6>
-						</a> 
+						</a>
 					</div>
 					<div class="collapse show" id="collapse1">
 						<div class="card-body">
@@ -43,9 +46,11 @@
 							class="card-header py-3 d-flex justify-content-between align-items-center"
 							data-toggle="collapse" role="button" aria-expanded="true"
 							aria-controls="collapse2">
-							<h6 class="m-0 font-weight-bold" th:text="${empDeptName != null ? empDeptName + ' 일정관리' : '부서별 일정관리'}">부서별 일정관리</h6>
-						</a>
-						<a th:href="@{/schedule/schWrite}" class="btn btn-sm btn-primary">일정 등록</a>
+							<h6 class="m-0 font-weight-bold"
+								th:text="${empDeptName != null ? empDeptName + ' 일정관리' : '부서별 일정관리'}">부서별
+								일정관리</h6>
+						</a> <a th:href="@{/schedule/schWrite}" class="btn btn-sm btn-primary">일정
+							등록</a>
 					</div>
 					<div class="collapse show" id="collapse2">
 						<div class="card-body">
@@ -66,34 +71,38 @@
 				<div class="modal-content">
 					<div class="modal-header">
 						<h5 class="modal-title" id="addScheduleModalLabel">간편 일정 등록</h5>
-						<button class="close" type="button" data-dismiss="modal" aria-label="Close">
+						<button class="close" type="button" data-dismiss="modal"
+							aria-label="Close">
 							<span aria-hidden="true">×</span>
 						</button>
 					</div>
 					<form th:action="@{/schedule/save}" method="post">
 						<div class="modal-body">
 							<div class="form-group">
-								<label for="modalAuthor">작성자</label>
-								<input type="text" class="form-control" id="modalAuthor" name="authorName" readonly>
-								<input type="hidden" id="modalEmpId" name="empId">
+								<label for="modalAuthor">작성자</label> <input type="text"
+									class="form-control" id="modalAuthor" name="authorName"
+									readonly> <input type="hidden" id="modalEmpId"
+									name="empId">
 							</div>
-							
+
 							<div class="form-group">
-								<label for="schType">일정 타입</label> 
-								<select class="form-control" id="schType" name="schType">
+								<label for="schType">일정 타입</label> <select class="form-control"
+									id="schType" name="schType">
 									<th:block th:if="${isAdmin}">
 										<option value="전체">전체 일정</option>
-										<option th:each="dept : ${allDepartments}" th:value="${dept.comDtNm}" th:text="${dept.comDtNm + ' 일정'}"></option>
+										<option th:each="dept : ${allDepartments}"
+											th:value="${dept.comDtNm}" th:text="${dept.comDtNm + ' 일정'}"></option>
 									</th:block>
 									<th:block th:unless="${isAdmin}">
-										<option th:value="${empDeptName}" th:text="${empDeptName + ' 일정'}"></option>
+										<option th:value="${empDeptName}"
+											th:text="${empDeptName + ' 일정'}"></option>
 									</th:block>
 								</select>
 							</div>
 
 							<div class="form-group">
-								<label for="modalTitle">일정 제목</label>
-								<input type="text" class="form-control" id="modalTitle" name="schTitle" required>
+								<label for="modalTitle">일정 제목</label> <input type="text"
+									class="form-control" id="modalTitle" name="schTitle" required>
 							</div>
 
 							<div class="form-group">
@@ -103,13 +112,14 @@
 							</div>
 
 							<div class="form-group">
-								<label for="modalStartDate">시작일</label>
-								<input type="date" class="form-control" id="modalStartDate" name="startDate" required> 
+								<label for="modalStartDate">시작일</label> <input type="date"
+									class="form-control" id="modalStartDate" name="startDate"
+									required>
 							</div>
 
 							<div class="form-group">
-								<label for="modalEndDate">종료일</label>
-								<input type="date" class="form-control" id="modalEndDate" name="endDate" required>
+								<label for="modalEndDate">종료일</label> <input type="date"
+									class="form-control" id="modalEndDate" name="endDate" required>
 							</div>
 						</div>
 						<div class="modal-footer">
@@ -194,6 +204,9 @@
 				</div>
 			</div>
 		</div>
+	</th:block>
+	<th:block layout:fragment="script">
+		<script th:src="@{/bootstrap/js/groupware/schedule.js}"></script>
 	</th:block>
 </body>
 </html>
