인사발령 employee 테이블 update, transfer 테이블 insert 완료

--- a/bootstrap_stater/src/main/resources/templates/approval/approval_List.html
+++ b/bootstrap_stater/src/main/resources/templates/approval/approval_List.html
@@ -447,6 +447,9 @@
 		        return;
 		    }
 		    
+		    const csrfToken = $('meta[name="_csrf"]').attr('content');
+	    	const csrfHeaderName = $('meta[name="_csrf_header"]').attr('content');
+		    
 		    fetch(API_ENDPOINTS.cancel(reqId), {
 		        method: 'POST',
 		        headers: {
