--- a/bootstrap_stater/src/main/resources/templates/gw/document.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/document.html
@@ -36,6 +36,7 @@
 									<th>제목</th>
 									<th>작성자</th>
 									<th>작성일</th>
+									<th>관리</th>
 								</tr>
 							</thead>
 							<tbody>
@@ -49,6 +50,10 @@
 									</td>
 									<td th:text="|${doc.empName} (${doc.deptName}/${doc.positionName})|"></td>
 									<td th:text="${doc.createAt != null} ? ${#temporals.format(doc.createAt, 'yyyy-MM-dd')} : ''"></td>
+									<td>
+										<a class="btn btn-warning" id="modify-btn" th:href="@{/groupware/docWrite(docId=${doc.docId})}">수정</a>
+										<button type="button" class="btn btn-danger" id="delete-btn" th:attr="data-id=${doc.docId}">삭제</button>
+									</td>
 								</tr>
 							</tbody>
 						</table>
@@ -60,6 +65,36 @@
 	
 	<th:block layout:fragment="script">
 	    <script>
+			$(document).on("click", "#delete-btn", function () {
+				
+				  if(!confirm("정말 삭제하시겠습니까?"))
+				  {
+					return false;
+				  }
+				  
+				  let docId = $(this).data("id");
+				  
+				  // meta 태그로 삽입되어 있을 때
+				  let token = $('meta[name="_csrf"]').attr('content');       // 토큰 값
+				  let header = $('meta[name="_csrf_header"]').attr('content'); // 헤더 이름
+				
+				  fetch(`/groupware/removeById/${docId}`, {
+				      method: "DELETE",
+				      headers: {
+				          [header]: token   // 동적으로 헤더 이름에 CSRF 토큰 넣기
+				      }
+				  })
+				  .then(response => {
+                      if (response.ok) {
+                        location.href = "/groupware/document";
+                      } else if (response.status === 403) {
+                        alert("권한이 없습니다.");
+                      } else {
+                        alert("삭제에 실패하였습니다.");
+                      }
+			      })
+				  .catch(error => console.error("Error:", error));
+			});
 	    </script>
 	</th:block>    
 </body>
