--- a/bootstrap_stater/src/main/resources/templates/admin/commonCode.html
+++ b/bootstrap_stater/src/main/resources/templates/admin/commonCode.html
@@ -30,7 +30,7 @@
 								<input type="search" id="codeSearch" />
 							</div>
 						</div>
-						<div class="codeContainer" style="height:395px; overflow-y:auto;">
+zm						<div class="codeContainer" style="height:500px; overflow-y:auto;">
 							<div class="table-responsive">
 								<table id ="bigTable" class="table table-bordered">
 									<thead>
@@ -71,7 +71,7 @@
 							<input type="search" id="codeDetailSearch" />
 						</div>
 					 </div>
-                     <div class="card-body" id="detailArea" style="display:none; height:395px; overflow-y:auto;">
+                     <div class="card-body" id="detailArea" style="display:none; height:500px; overflow-y:auto;">
                      	<table id ="smallTable" class="table table-bordered">
 							<thead>
 								<tr>
