--- a/bootstrap_stater/src/main/resources/templates/gw/schedule.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/schedule.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 	layout:decorate="~{layouts/layout}">
 <head>
 <meta charset="UTF-8">
@@ -12,11 +13,15 @@
 	rel="stylesheet">
 <link href="css/sb-admin-2.min.css" rel="stylesheet">
 </head>
-<body th:data-current-emp-name="${currentEmpName}"
-	th:data-current-emp-id="${currentEmpId}"
-	th:data-emp-dept-id="${empDeptId}"
-	th:data-emp-dept-name="${empDeptName}">
+<body>
 	<th:block layout:fragment="content">
+		<th:block sec:authorize="isAuthenticated()">
+			<input type="hidden" id="currentEmpId" th:value="${#authentication.principal.empId}" />
+			<input type="hidden" id="currentEmpName" th:value="${#authentication.principal.name}" />
+			<input type="hidden" id="empDeptId" th:value="${#authentication.principal.empDeptId}" />
+			<input type="hidden" id="empDeptName" th:value="${#authentication.principal.empDeptName}" />
+		</th:block>
+
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-6 mb-4">
