전자결재 유형이 인사발령일 경우 content 내용 view 수정 + 인사발령 리스트 추가

--- a/bootstrap_stater/src/main/resources/templates/hrn/personnelTrans.html
+++ b/bootstrap_stater/src/main/resources/templates/hrn/personnelTrans.html
@@ -53,14 +53,13 @@
                                         <th scope="col">성명</th>
                                         <th scope="col">발령구분</th>
                                         <th scope="col">발령일자</th>
-                                        <th scope="col">직위/직급</th>
                                         <th scope="col">부서</th>
-                                        <th scope="col">작성일자</th>
+                                        <th scope="col">직급</th>
                                     </tr>
                                 </thead>
-                                <tbody id="personnelOrdersTableBody">
+                                <tbody id="transferTableBody">
                                     <tr>
-                                        <td colspan="8" class="text-center py-4">데이터가 없습니다.</td>
+                                        <td colspan="7" class="text-center py-4">데이터가 없습니다.</td>
                                     </tr>
                                 </tbody>
                             </table>
