--- a/bootstrap_stater/src/main/resources/templates/admin/commonCode.html
+++ b/bootstrap_stater/src/main/resources/templates/admin/commonCode.html
@@ -27,10 +27,10 @@
 						<div class="col-6" style="padding: 10px 0 5px 12px;">
 							<div class="filterCode">
 								<label for="codeSearch" class="codeSearch">검색</label>
-								<input type="search" id="codeSearch" />
+								<input type="search" id="codeSearch" placeholder="코드/코드명" />
 							</div>
 						</div>
-zm						<div class="codeContainer" style="height:500px; overflow-y:auto;">
+						<div class="codeContainer" style="height:500px; overflow-y:auto;">
 							<div class="table-responsive">
 								<table id ="bigTable" class="table table-bordered">
 									<thead>
@@ -68,7 +68,7 @@ zm						<div class="codeContainer" style="height:500px; overflow-y:auto;">
                      <div class="col-6" style="padding: 10px 0 5px 12px; display: none;">
                      	<div class="filterCode">
 							<label for="codeSearch" class="codeSearch">검색</label>
-							<input type="search" id="codeDetailSearch" />
+							<input type="search" id="codeDetailSearch" placeholder="코드/코드명/정렬순서"/>
 						</div>
 					 </div>
                      <div class="card-body" id="detailArea" style="display:none; height:500px; overflow-y:auto;">
