--- a/bootstrap_stater/src/main/resources/templates/fragments/header.html
+++ b/bootstrap_stater/src/main/resources/templates/fragments/header.html
@@ -2,12 +2,14 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 	layout:fragment="header">
-	
+
 	<th:block sec:authorize="isAuthenticated()">
-    	<input type="hidden" id="currentEmpId" th:value="${#authentication.principal.empId}" />
-    	<input type="hidden" id="currentEmpName" th:value="${#authentication.principal.name}" />
-    </th:block>
-	
+		<input type="hidden" id="currentEmpId"
+			th:value="${#authentication.principal.empId}" />
+		<input type="hidden" id="currentEmpName"
+			th:value="${#authentication.principal.name}" />
+	</th:block>
+
 	<!-- Page Wrapper -->
 	<div id="wrapper">
 
@@ -256,7 +258,8 @@
 							<div
 								class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
 								aria-labelledby="messagesDropdown">
-								<h6 class="dropdown-header text-center" style="font-size: 16px;">메신저	바로가기</h6>
+								<h6 class="dropdown-header text-center" style="font-size: 16px;">메신저
+									바로가기</h6>
 								<div id="messageList"></div>
 								<a class="dropdown-item text-center small text-gray-500"
 									th:href="@{/privateChat}">Read More Messages</a>
@@ -277,21 +280,18 @@
 							<div
 								class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
 								aria-labelledby="userDropdown">
-								<a class="dropdown-item" href="#"> <i
-									class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i> Profile
-								</a> <a class="dropdown-item" href="#"> <i
-									class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-									Settings
-								</a> <a class="dropdown-item" href="#"> <i
-									class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
-									Activity Log
-								</a>
+								<a class="dropdown-item" href="#"> 
+								<i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i> 마이 프로필 조회 </a>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="#" data-toggle="modal"
-									data-target="#logoutModal"> <i
-									class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-									Logout
-								</a>
+								<form th:action="@{/logout}" method="post"
+									style="display: inline;">
+									<input type="hidden" th:name="${_csrf.parameterName}"
+										th:value="${_csrf.token}" />
+									<button type="submit" class="dropdown-item">
+										<i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+										로그아웃
+									</button>
+								</form>
 							</div></li>
 						<li class="nav-item dropdown no-arrow"
 							sec:authorize="!isAuthenticated()"><a class="nav-link"
