--- a/bootstrap_stater/src/main/resources/templates/gw/chat.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/chat.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+    xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 	layout:decorate="~{layouts/layout}">
 <head>
 <meta charset="UTF-8">
 <title>사내 메신저</title>
 </head>
-<body th:data-current-emp-id="${currentEmpId}"
-	th:data-current-emp-name="${currentEmpName}">
+<body>
 	<th:block layout:fragment="content">
+		<th:block sec:authorize="isAuthenticated()">
+            <input type="hidden" id="currentEmpId" th:value="${#authentication.principal.empId}" />
+            <input type="hidden" id="currentEmpName" th:value="${#authentication.principal.name}" />
+        </th:block>
+
 		<div id="chat-page" class="container-fluid">
 			<h1>사내 메신저</h1>
 			<div id="messageArea" class="card-body bg-light"
