--- a/bootstrap_stater/src/main/resources/templates/hrn/personnelTrans.html
+++ b/bootstrap_stater/src/main/resources/templates/hrn/personnelTrans.html
@@ -65,7 +65,7 @@
                             </table>
 
                             <div class="d-flex justify-content-between align-items-center mt-4">
-                                <div id="paginationInfo">Showing 0 to 0 of 0 entries</div>
+                                <div id="paginationInfo"></div>
                                 <nav aria-label="Page navigation">
                                     <ul class="pagination pagination-sm mb-0">
                                         <li class="page-item"><a class="page-link" href="#" id="prevPageBtn">이전</a></li>
