--- a/bootstrap_stater/src/main/resources/templates/login.html
+++ b/bootstrap_stater/src/main/resources/templates/login.html
@@ -47,7 +47,8 @@
 										<h1 class="h4 text-gray-900 mb-4">심화반 ERP</h1>
 									</div>
 									<form class="user" method="post" action="/login">
-									<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+										<input type="hidden" th:name="${_csrf.parameterName}"
+											th:value="${_csrf.token}" />
 										<div class="form-group">
 											<input type="text" class="form-control form-control-user"
 												name="empId" placeholder="사원번호를 입력하세요">
@@ -57,11 +58,10 @@
 												name="empPasswd" id="exampleInputPassword"
 												placeholder="비밀번호를 입력하세요">
 										</div>
-										<div class="form-group">
-											<div class="custom-control custom-checkbox small">
-											<input type="checkbox" name="remember-id" th:checked="${rememberId != null}">
-												사원번호기억하기
-											</div>
+										<div class="form-check">
+											<input type="checkbox" class="form-check-input"
+												id="rememberMe" name="remember-id"> <label
+												class="form-check-label" for="rememberMe">사원번호 기억하기</label>
 										</div>
 										<button type="submit"
 											class="btn btn-primary btn-user btn-block">로그인</button>
