검색 필터링 수정

--- a/bootstrap_stater/src/main/resources/templates/hrn/personnelTrans.html
+++ b/bootstrap_stater/src/main/resources/templates/hrn/personnelTrans.html
@@ -28,7 +28,7 @@
                         <div class="header-bar">
                             <div class="search-container">
                                 <select id="orderTypeSelect" class="form-select" aria-label="발령구분">
-                                    <option selected>발령구분</option>
+                                    <option value="ALL">발령구분</option>
                                     <option value="PROMOTION">승진</option>
                                     <option value="TRANSFER">전보</option>
                                     <option value="ALL">전체</option>
