상세보기 페이지 이미지 표시 지움

--- a/bootstrap_stater/src/main/resources/templates/hrn/personnelDetailInfo.html
+++ b/bootstrap_stater/src/main/resources/templates/hrn/personnelDetailInfo.html
@@ -36,7 +36,7 @@
 										<!--******************* 사진 *******************-->
 										<td rowspan="3" class="text-center">
 											<div class="photo-wrapper1">
-												<img id="pFIle" name="pFIle" alt="" th:src="@{C:/usr/local/tomcat/upload/personnel/img/+${perImg.fileName}}" >
+												<img id="pFIle" name="pFIle" alt="" >
 											</div>
 										</td>
 										<!-- 이름 -->
