--- a/bootstrap_stater/src/main/resources/templates/commute/admin_commute_list.html
+++ b/bootstrap_stater/src/main/resources/templates/commute/admin_commute_list.html
@@ -100,7 +100,7 @@
 							      </div>
 							      <div class="modal-body">
 							        <p id="deleteModalMessage"></p>
-							        <textarea id="deleteReason" class="form-control" placeholder="삭제 사유를 입력하세요"></textarea>
+							        <textarea id="deleteReason" class="form-control" placeholder="삭제 사유를 입력하세요" required="required"></textarea>
 							      </div>
 							      <div class="modal-footer">
 							        <button type="button" class="btn btn-secondary" data-dismiss="modal">닫기</button>
